# global_tax_policy_and_revenue_explorer

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  bootstrap_repo.sh  conftest.py  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  etl-nightly.yml
adr/ADR-001/: index.html
api/: main.py
changelog/: index.html
docs/: index.md
docs/adr/: ADR-001.md
etl/gold/: build_metrics.py  build_metrics_oecd.py
etl/raw/: download_oecd.py  download_oecd_rev.py
etl/tests/: test_compare_tab_data.py  test_metrics.py  test_oecd_pipeline.py
etl/tests/golden/: comp_3cty_y2021.csv  t2g_3cty_2yrs.csv
etl/transform/: normalize_oecd_rev.py  to_silver.py
global_tax_policy_and_revenue_explorer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
infra/: Dockerfile
scripts/: make_compare_golden.py  print_tree.sh
search/: search_index.json
ui/: app.py
