[project]
name = "global-tax-policy-and-revenue-explorer"
version = "0.1.0"
requires-python = ">=3.10"
description = "MVP for global tax policy & revenue explorer"
readme = "README.md"
license = {text = "MIT"}

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
ignore = ["E203"]  # compatible with black on slices
target-version = "py310"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
