[project]
name = "global-tax-policy-and-revenue-explorer"
version = "0.1.0"
requires-python = ">=3.10"
description = "MVP for global tax policy & revenue explorer"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py310"
force-exclude = true
extend-exclude = ["review_bundle_*", "data", ".venv", ".ruff_cache", ".pytest_cache", "backups"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]  # black-compatible slicing

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["etl", "api", "ui"]
